[ADD] Datos anónimos para dashboards